@@ -25,8 +25,8 @@
 // these are specifically assigned to USBtiny,
 // if you need your own VID and PIDs you can get them for cheap from
 // www.mecanique.co.uk so please don't reuse these. Thanks!
-#define USBTINY_VENDOR  0x1781
-#define USBTINY_PRODUCT 0x0C9F
+#define USBTINY_VENDOR_DEFAULT  0x1781
+#define USBTINY_PRODUCT_DEFAULT 0x0C9F
 
 // Generic requests to the USBtiny
 #define	USBTINY_ECHO 	     0      // echo test
